# thread_pool

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
include/: thread_pool.hpp
include/thread_pool/: thread_pool.hpp
src/: thread_pool.cpp
tests/: thread_pool_tests.cpp
